--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <project default="all" basedir=".">
 
-	<property name="VERSION" value="1.06"/>
+	<property name="VERSION" value="1.07"/>
 	<property name="PACKAGE_NAME" value="flixel"/>
 
 	<target name="Project Template">
@@ -15,7 +15,7 @@
 
 	<target name="Haxelib Package" depends="Run.n, Project Template">
 		<zip destfile="${PACKAGE_NAME}-${VERSION}.zip">
-			<zipfileset dir="" prefix="${PACKAGE_NAME}" includes="run.n,haxelib.xml,template.zip,CHANGELOG.txt" />
+			<zipfileset dir="" prefix="${PACKAGE_NAME}" includes="run.n,haxelib.xml,template.zip,CHANGELOG.txt,include.nmml" />
 			<zipfileset dir="src" prefix="${PACKAGE_NAME}" />
 		</zip>
 	</target>
