--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ before_script:
   - sudo add-apt-repository ppa:eyecreate/haxe -y
   - sudo apt-get update
   - sudo apt-get install haxe -y
+  - sudo dpkg --add-architecture i386
+  - sudo apt-get install ia32-libs
   - mkdir ~/haxelib
   - haxelib setup ~/haxelib
   - haxelib install openfl
