Testing automatic build service travis-ci - attempt #6 - I think I got it this time!

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,14 @@ before_script:
   - haxelib install openfl-html5
   - haxelib install openfl-tools
   - haxelib run openfl setup linux
+  - haxelib install systools
+  - haxelib install nape
+  - haxelib install task
+  - haxelib git firetongue https://github.com/larsiusprime/firetongue
   - haxelib git flixel-addons https://github.com/HaxeFlixel/flixel-addons
   - haxelib git flixel-demos https://github.com/HaxeFlixel/flixel-demos
   - haxelib git flixel-tools https://github.com/HaxeFlixel/flixel-tools
+  - haxelib git flixel-ui https://github.com/HaxeFlixel/flixel-ui
   - haxelib git flixel https://github.com/HaxeFlixel/flixel
 
 script:
