--- a/.travis.yml
+++ b/.travis.yml
@@ -23,10 +23,10 @@ before_script:
   - haxelib install task
   - haxelib git firetongue https://github.com/larsiusprime/firetongue
   - haxelib git flixel-addons https://github.com/HaxeFlixel/flixel-addons
-  - haxelib git flixel-demos https://github.com/HaxeFlixel/flixel-demos
   - haxelib git flixel-tools https://github.com/HaxeFlixel/flixel-tools
   - haxelib git flixel-ui https://github.com/HaxeFlixel/flixel-ui dev
   - haxelib git flixel https://github.com/HaxeFlixel/flixel
+  - haxelib git flixel-demos .
 
 script:
   - haxelib run flixel-tools testdemos
