--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,8 @@ before_script:
   - mkdir ~/haxelib
   - haxelib setup ~/haxelib
   - haxelib install lime
-  - haxelib install lime-tools
-  - haxelib install openfl
-  - haxelib install openfl-native
-  - haxelib install openfl-html5
-  - haxelib install openfl-tools
-  - haxelib install openfl-samples
-  - haxelib run openfl setup linux
+  - haxelib run lime setup
+  - haxelib run lime install openfl
   - haxelib install systools
   - haxelib install spinehx
   - haxelib install actuate
