Add flixel-addons dev to coverage test.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,13 @@ before_script:
   - haxelib install nape
   - haxelib install task
   - haxelib git firetongue https://github.com/larsiusprime/firetongue
-  - haxelib git flixel-addons https://github.com/HaxeFlixel/flixel-addons
+  - git clone https://github.com/HaxeFlixel/flixel-addons -b dev
   - haxelib git flixel-demos https://github.com/HaxeFlixel/flixel-demos
   - haxelib git flixel-tools https://github.com/HaxeFlixel/flixel-tools
   - haxelib git flixel-ui https://github.com/HaxeFlixel/flixel-ui dev
+  - haxelib dev flixel-addons ./flixel-addons
   - haxelib dev flixel .
+  - ls
 
 script:
   - cd ./test
