update travis script to renamed folder.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,6 @@ before_script:
   - haxelib dev flixel .
 
 script:
-  - cd ./test
+  - cd ./tests
   - haxe test.hxml
   - haxelib run flixel-tools testdemos
