--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,5 @@ before_script:
   - haxelib dev flixel-demos .
 
 script:
-  - haxelib run flixel-tools testdemos flash
-  - haxelib run flixel-tools testdemos neko
+  - haxelib run flixel-tools testdemos -flash
+  - haxelib run flixel-tools testdemos -neko
