--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,5 @@ before_script:
 script:
   - cd ./tests
   - haxe test.hxml
-  - haxelib run flixel-tools testdemos
+  - haxelib run flixel-tools testdemos -flash
+  - haxelib run flixel-tools testdemos -neko
