--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_script:
   - haxelib -notimeout install spinehx
   - haxelib -notimeout install nape
   - haxelib -notimeout install task
+  - haxelib git openfl-bitfive https://github.com/YellowAfterlife/openfl-bitfive
   - haxelib git firetongue https://github.com/larsiusprime/firetongue
   - haxelib git flixel-tools https://github.com/HaxeFlixel/flixel-tools
   - haxelib git flixel-addons https://github.com/HaxeFlixel/flixel-addons dev
@@ -25,3 +26,4 @@ before_script:
 script:
   - haxelib run flixel-tools testdemos -flash
   - haxelib run flixel-tools testdemos -neko
+  - haxelib run flixel-tools testdemos -html5
